--- a/_config.yml
+++ b/_config.yml
@@ -6,11 +6,12 @@ exclude: ["node_modules", "gulpfile.js", "package.json"]
 # Jekyll Defaults
 title: Delilah's Passport
 email: delilahflexas@gmail.com
-description: A small and simple site I made to test out Jekyll. Watch out! I'm going to make a material design theme next!
-baseurl: "/travel_blog" # the subpath of your site, e.g. /blog
 
 # Where can people find your site?
 url: "https://cisnerosoc.github.io/travel_blog"
+baseurl: "/travel_blog"
+url-pretty: "cisnerosoc.github.io/travel_blog"
+
 # When developing, set this ^ equal to whatever localhost you're using
 
 # Socail Media links
