--- a/_config.yml
+++ b/_config.yml
@@ -8,9 +8,9 @@ title: Delilah's Passport
 email: delilahflexas@gmail.com
 
 # Where can people find your site?
-url: "https://cisnerosoc.github.io/travel_blog"
+url: "https://delilahflexas.github.io/travel_blog"
 baseurl: "/travel_blog"
-url-pretty: "cisnerosoc.github.io/travel_blog"
+url-pretty: "delilahflexas.github.io/travel_blog"
 
 # When developing, set this ^ equal to whatever localhost you're using
 
