--- a/_config.yml
+++ b/_config.yml
@@ -8,9 +8,8 @@ title: Delilah's Passport
 email: delilahflexas@gmail.com
 
 # Where can people find your site?
-url: "https://delilahflexas.github.io/travel_blog"
-baseurl: "/travel_blog"
-url-pretty: "delilahflexas.github.io/travel_blog"
+url: "http://delilahspassport.com"
+url-pretty: "http://delilahspassport.com"
 
 # When developing, set this ^ equal to whatever localhost you're using
 
